<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/imageViewLogoEscola"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="20dp"
            android:contentDescription="@string/imageViewLogoUtfpr"
            android:src="@drawable/logo_utfpr" />

        <TextView
            android:id="@+id/txtNomeAluno"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/txtNomeAluno"
            android:textAlignment="center"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/txtEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/txtEmail"
            android:textAlignment="center"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/txtCurso"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/txtCurso"
            android:textAlignment="center"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/txtDescricaoApp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/txtDescricaoApp"
            android:textAlignment="center"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/txtNomeEscola"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/txtNomeEscola"
            android:textAlignment="center"
            android:textSize="18sp" />
    </LinearLayout>
</ScrollView>