<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context=".CadastroActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="10dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:orientation="vertical">

                <CheckBox
                    android:id="@+id/cbConheceNome"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:text="@string/cbConheceNome" />

                <TextView
                    android:id="@+id/txtTituloNome"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:labelFor="@id/txtNome"
                    android:text="@string/txtTituloNome" />

                <EditText
                    android:id="@+id/txtNome"
                    android:layout_width="0dp"
                    android:layout_height="35dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="8dp"
                    android:ems="10"
                    android:hint="@string/txtNome"
                    android:inputType="text" />

                <TextView
                    android:id="@+id/txtTituloEndereco"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:labelFor="@id/txtEndereco"
                    android:text="@string/txtTituloEndereco" />

                <EditText
                    android:id="@+id/txtEndereco"
                    android:layout_width="0dp"
                    android:layout_height="35dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="8dp"
                    android:ems="10"
                    android:hint="@string/txtEndereco"
                    android:inputType="text" />

                <RadioGroup
                    android:id="@+id/rbTipoContato"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp">

                    <RadioButton
                        android:id="@+id/rbTipoContatoCelular"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/rbTipoContatoCelular" />

                    <RadioButton
                        android:id="@+id/rbTipoContatoEmail"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/rbTipoContatoEmail" />
                </RadioGroup>

                <TextView
                    android:id="@+id/txtTituloContato"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:labelFor="@id/txtContato"
                    android:text="@string/txtTituloContato" />

                <EditText
                    android:id="@+id/txtContato"
                    android:layout_width="0dp"
                    android:layout_height="35dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="8dp"
                    android:ems="10"
                    android:hint="@string/txtContato" />

                <TextView
                    android:id="@+id/txtTituloNivelConfianca"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:labelFor="@id/spNivelConfianca"
                    android:text="@string/txtTituloNivelConfianca" />

                <Spinner
                    android:id="@+id/spNivelConfianca"
                    android:layout_width="0dp"
                    android:layout_height="48dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="8dp"
                    android:spinnerMode="dropdown" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <Button
                        android:id="@+id/btnSalvar"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:onClick="salvarValores"
                        android:text="@string/btnSalvar" />

                    <Button
                        android:id="@+id/btnLimpar"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:onClick="limparCampos"
                        android:text="@string/btnLimpar" />

                </LinearLayout>
            </LinearLayout>

        </androidx.cardview.widget.CardView>

    </LinearLayout>

</RelativeLayout>

